# ul-jvm

./: .gitignore  Cargo.toml  Main.class.autopsy  Main.class.hex  Main.java  README.md  res
src/: class_container.rs  jar.rs  main.rs  types.rs
src/class/: attributes.rs  constant_pool.rs  jvm_unit.rs  jvm_unit_field.rs  jvm_unit_method.rs  jvm_unit_util.rs  mod.rs  parser.rs
src/class/parser/: attributes.rs  constant_pool.rs  mod.rs  modified_utf8.rs
src/exec/: array.rs  class.rs  interface.rs  jpu.rs  method.rs  mod.rs  runtime_type.rs  thread.rs
src/exec/heap/: jvm_ref.rs  mod.rs
test-classes/: Main.java
ul-jni/: Cargo.toml
ul-jni/src/: api.rs  lib.rs  ptr.rs  types.rs
ul-jvm/: Cargo.toml
ul-jvm/src/: class_container.rs  main.rs  types.rs
ul-jvm/src/class/: attributes.rs  jvm_unit.rs  jvm_unit_method.rs  jvm_unit_util.rs
ul-jvm/src/class/parser/: constant_pool.rs  modified_utf8.rs
ul-jvm/src/exec/: class.rs  interface.rs  jpu.rs  method.rs  mod.rs  runtime_type.rs  thread.rs
ul-jvm/src/exec/heap/: jvm_ref.rs  mod.rs
ul-jvm/src/jni/: mod.rs
ul-jvm/src/native/: mod.rs
ul-jvm/src/native/jnb/: mod.rs
ul-jvm/src/native/jnb/classes/: mod.rs  object.rs
ul-jvm/src/native/jni/: mod.rs
