[package]
name = "ul-jvm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
env_logger = "0.11"
log = "0.4"
anyhow = "1"
binrw = "0.14"
strum.workspace = true
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
either = { version = "1", features = ["serde"] }
zip = "2.6"
cached = "0.55"
parking_lot.workspace = true
ul-jni.path = "../ul-jni"
